Added focus on popup

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -112,7 +112,7 @@
             Export the mosaic
           </p>
           <p>
-            <textarea class="form-control" readonly>{{getViewIframe()}}</textarea>
+            <textarea class="form-control" select-on-click readonly>{{getViewIframe()}}</textarea>
           </p>
           <a class="editor__step__show-more-options" ng-class="{ 'editor__step__show-more-options--active': showMoreOptions}" ng-click="showMoreOptions = !showMoreOptions">
             <i class="caret"></i>&nbsp;
@@ -191,7 +191,7 @@
         </div>
         <div class="panel-heading">
           <div class="input-group">
-            <input class="form-control" type="text" value="{{getViewUrl()}}" readonly />
+            <input class="form-control" type="text" value="{{getViewUrl()}}" select-on-click readonly />
             <span class="input-group-btn">
               <a class="btn btn-link" href="{{getViewUrl()}}" target="_blank" tooltip="Open the iframe in a new window">
                 <i class="fa fa-external-link"></i>
