--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -175,13 +175,13 @@
     }
 
     &__overlay {
-      position: fixed;
+      position: absolute;
       top:0;
       left:0;
       bottom:0;
       right:0;
-      background:fade(black, 50%);
-      .box-shadow(0 0 300px 0 fade(black, 80%) inset);
+      background:fade(white, 50%);
+      .box-shadow(0 0 300px 50px white inset);
     }
 
     &__panel {
