--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -70,6 +70,9 @@
         <h3>Embed</h3>
         <p>Please use the following embed code to share this view in your publications:</p>
         <textarea class="form-control" select-on-click readonly>{{ getViewIframe() }}</textarea>
+        <h3>Link</h3>
+        <p>This link will jump directly to this view:</p>
+        <input class="form-control" select-on-click readonly value="{{ scaffolder.viewUrl() }}" />
       </div>
     </div>
   </div>
