Added form-link class

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -12,3 +12,8 @@
 a, a:hover { cursor:pointer }
 html { background: @body-bg; }
 html .checkbox label { font-weight: bold; }
+
+.form-control.form-link {
+  text-decoration:underline;
+  color: mix(@link-color, @input-color);
+}
