--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -191,7 +191,7 @@
         </div>
         <div class="panel-heading">
           <div class="input-group">
-            <input class="form-control" type="text" value="{{getViewUrl()}}" select-on-click readonly />
+            <input class="form-control form-link" type="text" value="{{getViewUrl()}}" select-on-click readonly />
             <span class="input-group-btn">
               <a class="btn btn-link" href="{{getViewUrl()}}" target="_blank" tooltip="Open the iframe in a new window">
                 <i class="fa fa-external-link"></i>
