Edit pencil icon

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -197,7 +197,7 @@
                 <i class="fa fa-external-link"></i>
               </a>
               <a class="btn btn-link" tooltip="Permalink to edit the same mosaic" ui-sref="fork(scaffolder.serialized())">
-                <i class="fa fa-edit"></i>
+                <i class="fa fa-pencil-square"></i>
               </a>
             </span>
           </div>
