--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -25,16 +25,16 @@
   <div class="scaffolder__footer">
     Built with <a href="//pirhoo.github.io/iframe-scaffolder/" target="_blank">Iframe Scaffolder</a>
     <div class="scaffolder__footer__sharing-toggler" ng-show="options.sharing && scaffolder.hasMenu() && scaffolder.urls.length">
-      <button class="btn btn-xs btn-default" ng-click="displaySharingPopup = !displaySharingPopup">
+      <button class="btn btn-xs btn-default" ng-click="toggleSharingPopup()">
         <i class="fa fa-fw fa-share"></i>
         Share this view
       </button>
     </div>
   </div>
-  <div class="scaffolder__sharing-popup ng-hide" ng-show="displaySharingPopup">
-    <div class="scaffolder__sharing-popup__overlay" ng-click="displaySharingPopup = false"></div>
-    <div class="scaffolder__sharing-popup__panel panel panel-default" ng-show="displaySharingPopup">
-      <button class="scaffolder__sharing-popup__panel__close" ng-click="displaySharingPopup = false">
+  <div class="scaffolder__sharing-popup ng-hide" ng-show="shouldDisplaySharingPopup">
+    <div class="scaffolder__sharing-popup__overlay" ng-click="toggleSharingPopup()"></div>
+    <div class="scaffolder__sharing-popup__panel panel panel-default" ng-show="shouldDisplaySharingPopup">
+      <button class="scaffolder__sharing-popup__panel__close" ng-click="toggleSharingPopup()">
         <span aria-hidden="true">×</span>
       </button>
       <div class="panel-body">
@@ -45,7 +45,7 @@
         <p>
           <a socialshare
              socialshare-text="{{ scaffolder.getActive( 'Iframe ' + ($index + 1) ).label }}"
-             socialshare-url="{{ scaffolder.viewUrl(scaffolder.active) }}"
+             socialshare-url="{{ sharingUrl }}"
              socialshare-provider="twitter"
              class="btn btn-default scaffolder__sharing-popup__panel__twitter">
             <i class="fa fa-fw fa-twitter"></i>
@@ -53,7 +53,7 @@
           </a>
           <a socialshare
              socialshare-text="{{ scaffolder.getActive().label }}"
-             socialshare-url="{{ scaffolder.viewUrl(scaffolder.active) }}"
+             socialshare-url="{{ sharingUrl }}"
              socialshare-provider="facebook"
              socialshare-type="feed"
              socialshare-to=""
