Use shortener in template

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -72,7 +72,7 @@
         <textarea class="form-control" select-on-click readonly>{{ getViewIframe() }}</textarea>
         <h3>Link</h3>
         <p>This link will jump directly to this view:</p>
-        <input class="form-control form-link" select-on-click readonly value="{{ scaffolder.viewUrl() }}" />
+        <input class="form-control form-link" select-on-click readonly value="{{ sharingUrl }}" />
       </div>
     </div>
   </div>
