Implemented directional animations

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -14,10 +14,10 @@
       <h4 class="scaffolder__container__title">{{ scaffolder.getActive( 'Iframe ' + ($index + 1) ).label }}</h4>
     </aside>
     <iframe frameborder="0"
-            class="scaffolder__container__iframe scaffolder-slide-horizontal"
+            class="scaffolder__container__iframe scaffolder__container__iframe--anim-horizontal"
             width="{{iframeWidth($index, $first, $last)}}"
             height="{{iframeHeight($index, $first, $last)}}"
-            ng-class="{'scaffolder__container__iframe--last': $last, 'scaffolder__container__iframe--first': $first}"
+            ng-class="iframeClasses($index, $first, $last)"
             ng-src="{{scaffolder.url($index)}}"
             ng-show="scaffolder.isVisible($index, true)"
             ng-repeat="url in options.urls track by $index"></iframe>
