--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -7,8 +7,13 @@
   &__container {
     width: 100%;
     position:relative;
+    background:inherit;
 
     &__menu {
+
+      background:inherit;
+      position: relative;
+      z-index:100;
 
       &__item {
         cursor: pointer;
@@ -30,6 +35,7 @@
 
   &--menu &__container__menu {
     width:25%;
+    height:100%;
     padding:5px;
   }
 
@@ -145,6 +151,7 @@
     font-size:0.9em;
     filter:grayscale(0.7);
     position:relative;
+    z-index:110;
     .transition(0.6s);
 
     &:hover {
@@ -163,6 +170,7 @@
   &__sharing-popup {
 
     position: absolute;
+    z-index:120;
     top:0;
     left:0;
     bottom:0;
