Added autoplay methods

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -14,7 +14,7 @@
       <h4 class="scaffolder__container__title">{{ scaffolder.getActive( 'Iframe ' + ($index + 1) ).label }}</h4>
     </aside>
     <iframe frameborder="0"
-            class="scaffolder__container__iframe scaffolder__container__iframe--anim-horizontal"
+            class="scaffolder__container__iframe"
             width="{{iframeWidth($index, $first, $last)}}"
             height="{{iframeHeight($index, $first, $last)}}"
             ng-class="iframeClasses($index, $first, $last)"
