--- a/src/app/index.less
+++ b/src/app/index.less
@@ -6,6 +6,7 @@
 @import "mixins.less";
 @import "main/main.less";
 @import "view/view.less";
+@import "iframe-indicator/iframe-indicator.less";
 @import "scaffolder/scaffolder.less";
 @import "themes/themes.less";
 
