--- a/src/app/mixins.less
+++ b/src/app/mixins.less
@@ -35,4 +35,11 @@
   .scaffolder__container__title {
     color:mix(@active-bg, @iframe-color);
   }
+
+  .iframe-indicator--loading:after {
+    @bg-color: replace( ~"@{hover-color}", "#", "");
+    @bg-url: "//logo-js.herokuapp.com/loading-bars/@{bg-color}";
+    background-image: url(@bg-url);
+    background-color: @hover-bg;
+  }
 }
