--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -74,6 +74,7 @@
   &--tail {
     .scaffolder__container__iframe {
       margin-right:50%;
+      width:50%
     }
 
     .scaffolder__container__iframe--last {
@@ -81,6 +82,7 @@
       position:absolute;
       right:0;
       top:0;
+      width:50%
     }
   }
 
