--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -134,59 +134,66 @@
               <input type="number" ng-model="height" min="50" class="form-control input-sm editor__step__iframe-size__size" />
             </div>
           </div>
-          <div class="editor__step__option">
-            <div class="row">
-              <div class="col-xs-6">
-                <label for="input-autoplay">
-                  Choose the 1<sup>st</sup> iframe
+          <fieldset ng-disabled="!scaffolder.hasMenu()" class="editor__step__options-group">
+            <div class="editor__step__not-available" ng-show="!scaffolder.hasMenu()">
+              <div class="editor__step__not-available__label">
+                Not available for this layout
+              </div>
+            </div>
+            <div class="editor__step__option">
+              <div class="row">
+                <div class="col-xs-6">
+                  <label for="input-autoplay">
+                    Choose the 1<sup>st</sup> iframe
+                  </label>
+                </div>
+                <div class="col-xs-6">
+                  <select id="input-active" ng-model="options.active" class="form-control input-sm">
+                    <option value="{{$index}}" ng-repeat="url in options.urls track by $index">
+                      {{scaffolder.label($index)}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="editor__step__option">
+              <div class="row">
+                <div class="col-xs-6">
+                  <label for="input-autoplay">
+                    Autoplay to the next
+                  </label>
+                </div>
+                <div class="col-xs-6">
+                  <select id="input-autoplay" ng-model="options.autoplay" class="form-control input-sm">
+                    <option value="0">Do not autoplay</option>
+                    <option value="1">Every 1 second</option>
+                    <option value="2">Every 2 seconds</option>
+                    <option value="4">Every 4 seconds</option>
+                    <option value="8">Every 8 seconds</option>
+                    <option value="16">Every 16 seconds</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="editor__step__option">
+              <div class="checkbox">
+                <label for="input-loop">
+                  <input type="checkbox" ng-model="options.loop" ng-true-value="1" ng-false-value="0" id="input-loop" />
+                  Loop autoplay
                 </label>
-              </div>
-              <div class="col-xs-6">
-                <select id="input-active" ng-model="options.active" class="form-control input-sm">
-                  <option value="{{$index}}" ng-repeat="url in options.urls track by $index">
-                    {{scaffolder.label($index)}}
-                  </option>
-                </select>
+                <p class="text-muted small">When reaching the end of the autoplay.</p>
               </div>
             </div>
-          </div>
-          <div class="editor__step__option">
-            <div class="row">
-              <div class="col-xs-6">
-                <label for="input-autoplay">
-                  Autoplay to the next
+            <div class="editor__step__option">
+              <div class="checkbox">
+                <label for="input-sharing">
+                  <input type="checkbox" ng-model="options.sharing" ng-true-value="1" ng-false-value="0" id="input-sharing" />
+                  Allow iframe sharing
                 </label>
-              </div>
-              <div class="col-xs-6">
-                <select id="input-autoplay" ng-model="options.autoplay" class="form-control input-sm">
-                  <option value="0">Do not autoplay</option>
-                  <option value="1">Every 1 second</option>
-                  <option value="2">Every 2 seconds</option>
-                  <option value="4">Every 4 seconds</option>
-                  <option value="8">Every 8 seconds</option>
-                  <option value="16">Every 16 seconds</option>
-                </select>
+                <p class="text-muted small">The user will be able to share each iframe individually.</p>
               </div>
             </div>
-          </div>
-          <div class="editor__step__option">
-            <div class="checkbox">
-              <label for="input-loop">
-                <input type="checkbox" ng-model="options.loop" ng-true-value="1" ng-false-value="0" id="input-loop" />
-                Loop autoplay
-              </label>
-              <p class="text-muted small">When reaching the end of the autoplay.</p>
-            </div>
-          </div>
-          <div class="editor__step__option">
-            <div class="checkbox">
-              <label for="input-sharing">
-                <input type="checkbox" ng-model="options.sharing" ng-true-value="1" ng-false-value="0" id="input-sharing" />
-                Allow iframe sharing
-              </label>
-              <p class="text-muted small">The user will be able to share each iframe individually.</p>
-            </div>
-          </div>
+          </fieldset>
         </div>
       </div>
       <div class="text-muted small editor__credits hidden-xs hidden-sm">
