Fixed autoplay button display

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -27,8 +27,9 @@
   </div>
   <div class="scaffolder__footer">
     Built with <a href="//pirhoo.github.io/iframe-scaffolder/" target="_blank">Iframe Scaffolder</a>
-    <div class="scaffolder__footer__sharing-toggler" ng-show="options.sharing && scaffolder.hasMenu() && scaffolder.urls.length">
+    <div class="scaffolder__footer__sharing-toggler" ng-show="scaffolder.hasMenu() && scaffolder.urls.length">
       <button class="btn btn-xs"
+              ng-show="options.autoplay"
               ng-click="scaffolder.toggleAutoplay()"
               ng-class="{
                 'btn-default': !scaffolder.autoplayPlaying,
@@ -39,7 +40,9 @@
           'fa-pause': scaffolder.autoplayPlaying
         }"></i>
       </button>
-      <button class="btn btn-xs btn-default" ng-click="toggleSharingPopup()">
+      <button class="btn btn-xs btn-default"
+              ng-show="options.sharing"
+              ng-click="toggleSharingPopup()">
         <i class="fa fa-fw fa-share"></i>
         Share this view
       </button>
