--- a/src/app/index.less
+++ b/src/app/index.less
@@ -1,5 +1,5 @@
 // Vendors
-@import (less) "../../bower_components/angular-material/angular-material.css";
+@import (less) "../../node_modules/@bower_components/angular-material/angular-material.css";
 @import "bootstrap.loader.less";
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css";
 // Internal
