--- a/src/app/bootstrap.loader.less
+++ b/src/app/bootstrap.loader.less
@@ -1,35 +1,35 @@
 // Core variables and mixins
 @import "bootstrap.variables.less";
-@import "../../bower_components/bootstrap/less/mixins.less";
+@import "../../node_modules/@bower_components/bootstrap/less/mixins.less";
 
 // Reset and dependencies
-@import "../../bower_components/bootstrap/less/normalize.less";
-@import "../../bower_components/bootstrap/less/print.less";
+@import "../../node_modules/@bower_components/bootstrap/less/normalize.less";
+@import "../../node_modules/@bower_components/bootstrap/less/print.less";
 
 // Core CSS
-@import "../../bower_components/bootstrap/less/scaffolding.less";
-@import "../../bower_components/bootstrap/less/type.less";
-@import "../../bower_components/bootstrap/less/grid.less";
-@import "../../bower_components/bootstrap/less/forms.less";
-@import "../../bower_components/bootstrap/less/buttons.less";
+@import "../../node_modules/@bower_components/bootstrap/less/scaffolding.less";
+@import "../../node_modules/@bower_components/bootstrap/less/type.less";
+@import "../../node_modules/@bower_components/bootstrap/less/grid.less";
+@import "../../node_modules/@bower_components/bootstrap/less/forms.less";
+@import "../../node_modules/@bower_components/bootstrap/less/buttons.less";
 
 // Components
-@import "../../bower_components/bootstrap/less/dropdowns.less";
-@import "../../bower_components/bootstrap/less/button-groups.less";
-@import "../../bower_components/bootstrap/less/input-groups.less";
-@import "../../bower_components/bootstrap/less/navs.less";
-@import "../../bower_components/bootstrap/less/navbar.less";
-@import "../../bower_components/bootstrap/less/pager.less";
-@import "../../bower_components/bootstrap/less/labels.less";
-@import "../../bower_components/bootstrap/less/thumbnails.less";
-@import "../../bower_components/bootstrap/less/media.less";
-@import "../../bower_components/bootstrap/less/list-group.less";
-@import "../../bower_components/bootstrap/less/panels.less";
-@import "../../bower_components/bootstrap/less/wells.less";
+@import "../../node_modules/@bower_components/bootstrap/less/dropdowns.less";
+@import "../../node_modules/@bower_components/bootstrap/less/button-groups.less";
+@import "../../node_modules/@bower_components/bootstrap/less/input-groups.less";
+@import "../../node_modules/@bower_components/bootstrap/less/navs.less";
+@import "../../node_modules/@bower_components/bootstrap/less/navbar.less";
+@import "../../node_modules/@bower_components/bootstrap/less/pager.less";
+@import "../../node_modules/@bower_components/bootstrap/less/labels.less";
+@import "../../node_modules/@bower_components/bootstrap/less/thumbnails.less";
+@import "../../node_modules/@bower_components/bootstrap/less/media.less";
+@import "../../node_modules/@bower_components/bootstrap/less/list-group.less";
+@import "../../node_modules/@bower_components/bootstrap/less/panels.less";
+@import "../../node_modules/@bower_components/bootstrap/less/wells.less";
 
 // Components w/ JavaScript
-@import "../../bower_components/bootstrap/less/tooltip.less";
+@import "../../node_modules/@bower_components/bootstrap/less/tooltip.less";
 
 // Utility classes
-@import "../../bower_components/bootstrap/less/utilities.less";
-@import "../../bower_components/bootstrap/less/responsive-utilities.less";
+@import "../../node_modules/@bower_components/bootstrap/less/utilities.less";
+@import "../../node_modules/@bower_components/bootstrap/less/responsive-utilities.less";
