--- a/src/app/bootstrap.variables.less
+++ b/src/app/bootstrap.variables.less
@@ -80,7 +80,7 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-@icon-font-path:          '../bower_components/bootstrap/fonts/';
+@icon-font-path:          '../node_modules/@bower_components/bootstrap/fonts/';
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
