--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -145,6 +145,28 @@
     float:left;
   }
 
+  &__header {
+    padding:0 10px;
+
+    &__title, &__description {
+      margin-top:5px;
+      margin-bottom:0;
+    }
+
+    &__description {
+      font-size:1.2em;
+    }
+  }
+
+  &__header {
+    border-bottom:1px solid #ddd;
+    background:white;
+    width: 100%;
+    padding:10px 15px;
+    z-index:100;
+    position: relative;
+  }
+
   &__footer {
     width:100%;
     padding:5px 15px;
