--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -104,6 +104,23 @@
       </div>
       <div class="panel editor__step panel-default" ng-class="{ 'editor__step--disable': !options.urls.length }">
         <div class="editor__step__label"></div>
+        <div class="panel-body form-horizontal">
+          <div class="form-group">
+            <label for="input-title" class="control-label col-sm-4">Choose a title</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" ng-model="options.title" id="input-title">
+            </div>
+          </div>
+          <div class="form-group editor__step__last-group">
+            <label for="input-description" class="control-label col-sm-4">Describe</label>
+            <div class="col-sm-8">
+              <textarea class="form-control" ng-model="options.description" id="input-description"></textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel editor__step panel-default" ng-class="{ 'editor__step--disable': !options.urls.length }">
+        <div class="editor__step__label"></div>
         <div class="panel-body">
           <p>
             <button class="btn btn-primary btn-xs pull-right" ui-zeroclip zeroclip-model="getViewIframe()" title="Copy the embed code to you clipboard.">
