--- a/src/app/mixins.less
+++ b/src/app/mixins.less
@@ -26,6 +26,7 @@
   .scaffolder__container__menu__item.active a:hover {
     color: @active-color;
     background: @active-bg;
+    border-color: @active-color;
   }
   .scaffolder__container__menu__item a:hover {
     color: @hover-color;
@@ -33,7 +34,7 @@
   }
 
   .scaffolder__container__title {
-    color:mix(@active-bg, @iframe-color);
+    color:@iframe-color;
   }
 
   .iframe-indicator--loading:after {
