--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -38,6 +38,10 @@
     width:25%;
     height:100%;
     padding:5px;
+    a {
+      border-radius: 0;
+      border-right:transparent 3px solid;
+    }
   }
 
   &--menu &__container__iframe {
@@ -51,6 +55,10 @@
     width:20000%;
     padding:5px;
     white-space: nowrap;
+    a {
+      border-radius: 0;
+      border-bottom:transparent 3px solid;
+    }
   }
 
   &--narrative &__container__menu {
