--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -179,8 +179,15 @@
       opacity:1;
     }
 
+    .dropdown-menu {
+      overflow: auto;
+      max-height: 20rem;
+      max-width: none;
+    }
+
     &__theme {
       position:relative;
+      padding-right: 3.5rem;
 
       &__preview {
         position:absolute;
