--- a/src/components/themes/themes.less
+++ b/src/components/themes/themes.less
@@ -1,10 +1,23 @@
 .scaffolder {
   // Theming  overload
   html body &--default { .scaffolder-theme(); }
-  html body &--ebony-clay { .scaffolder-theme(#f0f3f5, @gray-dark, #22313F, white); }
-  html body &--picton-blue { .scaffolder-theme(white, @gray-dark, #59ABE3, white); }
-  html body &--silver-tree { .scaffolder-theme(white, @gray-dark, #68C3A3, white); }
-  html body &--sunset-orange { .scaffolder-theme(#f5f2f2, @gray-dark, #F64747, white); }
-  html body &--monza-red { .scaffolder-theme(#fff, @gray-dark, #CF000F, white, #140000); }
-  html body &--eucalyptus { .scaffolder-theme(#fff, @gray-dark, #53BF6B, white, #2d693a); }
+  html body &--ebony-clay { .scaffolder-theme(@body-bg, @text-color, @body-bg, #22313F, #fff); }
+  html body &--picton-blue { .scaffolder-theme(@body-bg, @text-color, @body-bg, #59ABE3, #fff); }
+  html body &--silver-tree { .scaffolder-theme(@body-bg, @text-color, @body-bg, #68C3A3, #fff); }
+  html body &--eucalyptus { .scaffolder-theme(@body-bg, @text-color, @body-bg, #53BF6B, #fff); }
+  html body &--sunset-orange { .scaffolder-theme(@body-bg, @text-color, @body-bg, #F64747, #fff); }
+  html body &--monza-red { .scaffolder-theme(@body-bg, @text-color, @body-bg, #CF000F, #fff); }
+  html body &--buddha-gold { .scaffolder-theme(@body-bg, @text-color, @body-bg, #AA9803, #fff); }
+  html body &--amarantha { .scaffolder-theme(@body-bg, @text-color, @body-bg, #e91e63, #fff); }
+
+  html body &--ebony-clay-filled { .scaffolder-theme(@body-bg, @text-color, #22313F, #fff, transparent, #000); }
+  html body &--picton-blue-filled { .scaffolder-theme(@body-bg, @text-color, #59ABE3, #000, #000, #fff); }
+  html body &--silver-tree-filled { .scaffolder-theme(@body-bg, @text-color, #68C3A3, #000, #000, #fff); }
+  html body &--eucalyptus-filled { .scaffolder-theme(@body-bg, @text-color, #53BF6B, #000, #000, #fff); }
+  html body &--amarantha-filled { .scaffolder-theme(@body-bg, @text-color, #e91e63, #000, #000, #fff); }
+  html body &--sunset-orange-filled { .scaffolder-theme(@body-bg, @text-color, #F64747, #000, #000, #fff); }
+  html body &--monza-red-filled { .scaffolder-theme(@body-bg, @text-color, #CF000F, #000, #000, #fff); }
+  html body &--buddha-gold-filled { .scaffolder-theme(@body-bg, @text-color,  #AA9803, #000, #000, #fff); }
+  html body &--gorse { .scaffolder-theme(@body-bg, @text-color, #ffeb3b, #000, #000, #fff); }
+
 }
