--- a/src/components/themes/themes.less
+++ b/src/components/themes/themes.less
@@ -10,13 +10,13 @@
   html body &--buddha-gold { .scaffolder-theme(@body-bg, @text-color, @body-bg, #AA9803, #fff); }
   html body &--amarantha { .scaffolder-theme(@body-bg, @text-color, @body-bg, #e91e63, #fff); }
 
-  html body &--ebony-clay-filled { .scaffolder-theme(@body-bg, @text-color, #22313F, #fff, transparent, #000); }
+  html body &--ebony-clay-filled { .scaffolder-theme(@body-bg, @text-color, #22313F, #fff, transparent, #000, mix(#fff, #22313F)); }
   html body &--picton-blue-filled { .scaffolder-theme(@body-bg, @text-color, #59ABE3, #000, #000, #fff); }
   html body &--silver-tree-filled { .scaffolder-theme(@body-bg, @text-color, #68C3A3, #000, #000, #fff); }
   html body &--eucalyptus-filled { .scaffolder-theme(@body-bg, @text-color, #53BF6B, #000, #000, #fff); }
   html body &--amarantha-filled { .scaffolder-theme(@body-bg, @text-color, #e91e63, #000, #000, #fff); }
   html body &--sunset-orange-filled { .scaffolder-theme(@body-bg, @text-color, #F64747, #000, #000, #fff); }
-  html body &--monza-red-filled { .scaffolder-theme(@body-bg, @text-color, #CF000F, #000, #000, #fff); }
+  html body &--monza-red-filled { .scaffolder-theme(@body-bg, @text-color, #CF000F, #fff, #fff, #000, mix(#fff, #CF000F)); }
   html body &--buddha-gold-filled { .scaffolder-theme(@body-bg, @text-color,  #AA9803, #000, #000, #fff); }
   html body &--gorse { .scaffolder-theme(@body-bg, @text-color, #ffeb3b, #000, #000, #fff); }
 
