--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -34,6 +34,15 @@
     }
   }
 
+  &__container__iframe {
+
+    &--gap-xs { padding: 0.25rem; }
+    &--gap-sm { padding: 0.50rem; }
+    &--gap-md { padding: 1.00rem; }
+    &--gap-lg { padding: 2.00rem; }
+    &--gap-xl { padding: 4.00rem; }
+  }
+
   &--menu &__container__menu {
     width:25%;
     height:100%;
